src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Residential Sales</fullName>
        <description>sale of residential properties</description>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
        <values>
            <fullName>Unit Finalization and Negotiation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Area_Range_in_Sq_ft__c</fullName>
        <label>Area Range ( in Sq.ft)</label>
        <picklist>
            <picklistValues>
                <fullName>500 - 600 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 - 700 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700 - 800 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 - 900 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 - 1000 sq.ft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bedroom_Preference__c</fullName>
        <label>Bedroom Preference</label>
        <picklist>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 BHK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Broker Firm)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_NameTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Broker_Firm__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Broker_Firm__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Broker Name)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_in_lacs__c</fullName>
        <label>Budget (in lacs)</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than 40 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-60 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-80 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-125 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-175 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>176-200 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 200 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 -4 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-6 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-12 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 12 crore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCU_Broker_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCU Broker Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (CCU Broker Code)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCU_Campaign_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCU Campaign Details</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCU_Employee_Name__c</fullName>
        <label>CCU Employee Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU_Source__c</fullName>
        <label>CCU Source</label>
        <picklist>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCU_referee_Customer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCU referee Customer Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account, Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (CCU referee Customer Code)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Point__c</fullName>
        <label>Capture Point</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Name</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Stage__c</fullName>
        <label>Completion Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearing Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CounterForCall__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CounterForCall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounterForSiteVisit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CounterForSiteVisit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateForCall__c</fullName>
        <label>DateForCall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_For_Testing__c</fullName>
        <label>Date For Testing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finishing_of_Apartment__c</fullName>
        <label>Finishing of Apartment</label>
        <picklist>
            <picklistValues>
                <fullName>Bareshell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FlatNo__c</fullName>
        <label>FlatNo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <label>Lead Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-contacted first attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-contacted second attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-contacted three+ attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_Remarks__c</fullName>
        <label>Modification Remarks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification__c</fullName>
        <label>Modification</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_funding_Bank__c</fullName>
        <label>Name of funding Bank</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Url__c</fullName>
        <label>Page Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Location_Details__c</fullName>
        <label>Preferred Location Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Location__c</fullName>
        <label>Preferred Location</label>
        <picklist>
            <picklistValues>
                <fullName>Same as Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preffered_Phone_Dialing_Code__c</fullName>
        <label>Preffered Phone Dialing Code</label>
        <picklist>
            <picklistValues>
                <fullName>091</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>534</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>044</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Interested__c</fullName>
        <label>Project Interested</label>
        <picklist>
            <picklistValues>
                <fullName>Project A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects_of_Interest__c</fullName>
        <label>Projects of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Project A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project E</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bungalow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row house</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Purchase__c</fullName>
        <label>Purpose of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>End Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Manual__c</fullName>
        <label>Rating (Manual)</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_System__c</fullName>
        <label>Rating (System)</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Booked_Won__c</fullName>
        <label>Reason for Booked(Won)</label>
        <picklist>
            <picklistValues>
                <fullName>Location &amp; Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value for money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex amenities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat amenities/finishes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbourhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Look of the building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Delay In contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet the  requirements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change_of_Source__c</fullName>
        <label>Reason for Change of Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_closed_Lost__c</fullName>
        <label>Reasons for closed (Lost)</label>
        <picklist>
            <picklistValues>
                <fullName>Beyond Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less/more Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluating  Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vastu Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <formula>ProjectName__r.Sales_Manager_Email__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Broker_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit Broker Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Site Visit Broker Code)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Broker_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit Broker Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Site Visit Broker Firm)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Broker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit Broker Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Site_Visit_Broker_Firm__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Site Visit Broker Name)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Campaign_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit Campaign Details</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Site Visit Campaign Details)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Employee_Name__c</fullName>
        <label>Site Visit Employee Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Source__c</fullName>
        <label>Site Visit Source</label>
        <picklist>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Visit_referee_Customer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit referee Customer Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account, Person Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Site Visit referee Customer Code)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stuck_Till_Day_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stuck Till Day 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stuck_Till_Day_5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stuck Till Day 5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Campaign_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Details(System)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (System Campaign Details)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>